agregue texto alternativo en img

--- a/styles/style.css
+++ b/styles/style.css
@@ -268,8 +268,8 @@ main {
 }
 
 .button-submit {
-    color: #f8f8f8;
-    background: #9747FF;
+    color: #5300C8;
+    background: #f8f8f8;
 }
 
 .button-submit,
