--- a/styles/style.css
+++ b/styles/style.css
@@ -336,10 +336,12 @@ footer {
 
 @media screen and (max-width: 768px) {
     main {
+        align-items: center;
         flex-direction: column;
     }
 
     .menu-header {
+        align-items: center;
         height: auto;
         padding: 10px;
     }
